stylesheets/main.scss
---
---

$primary-color: #2a7ae2;
$menu-background: linear-gradient(180deg, #1fc8db, #2a7ae2);



/* Base */
/* ----------------------------------------------------------*/

* { margin:  0; padding: 0; }

html, body { height: 100%; }

body {
  font-family: system, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
}

p {
	margin: 1em 0px
}

/* 
math {
	font-size: 40px;
}
 */



h1, h2, h3, h4, h5, h6 { 
	line-height: 1.25;
	font-weight: 600; 
	text-rendering: optimizeLegibility;
}



a       { color: $primary-color; text-decoration: none; }
a:hover { color: #000; text-decoration: underline; }



/* MathML */
/* ----------------------------------------------------------*/

mrow, msub {
	margin-right: 4px;
}




/* Page Content styles */
/* ----------------------------------------------------------*/

.page-content {
    padding: 4rem;
}

/* Layout Styles */
/* ----------------------------------------------------------*/



/* Menu */
/* ----------------------------------------------------------*/

.site-header {
  background-color: $primary-color;
//   background: $menu-background;
  color: white;
}

.site-title,
.site-title:visited {
	font-size: 3rem;
}


.site-subtitle {
	font-size: 1.5rem;
}


.social {
	margin-top: 1rem;
	margin-bottom: 1rem;
}


/* Site navigation */

.site-nav {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.site-header a {
    color: white;
/*     display: block; */
/*     text-align: center; */
}

.site-header a:hover {
    text-decoration: underline;
}

nav .nav-current {
	// no special style for the current page
}




/* Stuff */
/* ----------------------------------------------------------*/

p.subtitle {
    font-style: italic;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 5px;
}

h1 {
    font-size: 32px;
//     letter-spacing: -1.25px;
}

h2 {
    font-size: 26px;
//     letter-spacing: -1px;
}

h3 {
    font-size: 20px;
//     letter-spacing: -1px;
}

h3 {
    margin-bottom: 5px !important;
}

/* Home styles */
/* ----------------------------------------------------------*/

.home h1 { margin-bottom: 25px; }

.posts { list-style-type: none; }

.posts li { margin-bottom: 30px; }

.posts .post-link {
  font-size: 24px;
  letter-spacing: -1px;
  line-height: 1;
}

.posts .post-date {
  display: block;
  font-size: 15px;
  color: #818181;
}


/* Post styles */
/* ----------------------------------------------------------*/

.post-header { margin: 10px 0 30px; }

.post-header h1 {
  font-size: 42px;
  letter-spacing: -1.75px;
  line-height: 1;
  font-weight: 300;
}

.post-header .meta {
  font-size: 15px;
  color: #818181;
  /*margin-top: 5px;*/
}


.post-content { margin: 0 0 30px; }

ul.tokens {
	list-style: none;
	float: left;
	padding: 0;
	margin-left: 0;
	width: 100%;
}


ul.tokens li {
	float: left;
    padding: 2px 10px;
    margin: 0 5px 5px 0;
    background: #2a7ae2;
    color: #f5f5f5;
    font-size: 14px;
    border-radius: .2em
}

ul.tokens.blue li {
	background: $primary-color;
}

ul.tokens.grey li {
	background: #555;
}

/*.post-content > * { margin: 20px 0; }*/


/*.post-content h1,*/
/*.post-content h2,*/
/*.post-content h3,*/
/*.post-content h4,*/
/*.post-content h5,*/
/*.post-content h6 {*/
/*  line-height: 1;*/
/*  font-weight: 300;*/
/*  margin: 0 0 20px;*/
/*}*/



blockquote {
  border-left: 4px solid #e8e8e8;
  padding-left: 20px;
  font-size: 18px;
  opacity: .6;
  letter-spacing: -1px;
  font-style: italic;
  margin: 30px 0;
}

/* ul, ol { padding-left: 20px; } */


/* .post start here */
/* ----------------------------------------------------------*/

pre,
code {
  border: 1px solid #f2f2f2;
  color: #bf616a;
  background-color: #fff;
  border-radius: 3px;
  font-size: 12px;
  font-family: menlo, monaco, monospace;
}

code { padding: 1px 5px; }

ul, ol { list-style-type: none; }

li { line-height: 1.75; }

/* ol { margin-left: 1.35em; } */

pre code {
  border: 0;
  padding: 8px 12px;
}

/* terminal */
pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
  border-radius: 3px;
}

pre.terminal code { background-color: #333; }


/* stuff */
/* ----------------------------------------------------------*/

.project img {
}

.project-header img {
    float:right;
    margin-left:20px;
}


.project h1 {
    font-size: 26px;
    font-weight: bold;
    margin-bottom: 0px;
    letter-spacing: -1px;
}

.project h1 small {
	font-weight: 300;
}

.project h2.client, .project h2.role, .project h2.platform, .project h2.language {
	letter-spacing: 0px;
	font-size: 16px;
	font-weight: 400;
	/*color: #484848;*/
}

.project p {
	margin: 0.2em 0;
}

.project-link {
	padding-left: 20px;
}

/* 
img.app-icon {
    border-radius: 22.544%;
    box-shadow: 0 0 1px 0px #444;
}
 */

.project {
    /*overflow:hidden;*/
    margin-bottom: 40px;
}


.project small {
    font-size: 60%;
}


p.intro {
    margin-bottom: 20px;
}



@media screen and (min-width: 600px) {
    
	.site-header {
		position: fixed;
		top: 0;
		left: 0;
	  	bottom: 0;
	  	width: 15rem;
	}
	
	
	.site-nav {
		font-size: 20px;
	}

	
    
    
    .social {
/* 
    	position: absolute;
    	bottom: 3rem;
    	left: 1rem;
    	right: 1rem;
 */
    }
    
    
    
//     .wrap {
//         max-width: 960px;
//         padding: 0 30px;
//     }
    
    .container {
    	margin-left: 15rem;
    }
    
    
    .site-menu-contents {
    	position: absolute;
    	bottom: 2rem;
    	left: 1rem;
    	right: 1rem;
    }
    
    
    .small-print {
    	font-size: 75%;
/*     	text-align: center; */
/*     	color: #727272; */
    }
    
    
/* 
    .project img {
        float: right;
        width: 128px;
        margin-left: 40px;
    }
 */
    
}


/* media queries */
/* ----------------------------------------------------------*/

@media screen and (max-width: 600px) {


// .wrap { padding: 0 12px; }

.project img {
    float: none;
    display: block;
    width: 240px;
    margin-left: auto;
    margin-right: auto;
}

nav ul {
    float: none;
    text-align: center;
    margin-left: 0em;
    padding-left: 0px;
}

nav li {
    float: none;
    display: inline-block;
}

nav a {
    width: auto;
    height: 31px;
    line-height: 34px;
    margin-left: 0;
    margin: 0px 10px;
}

// .site-title {
//     text-align: center;
//     float: none;
//     line-height: 34px;
//     padding-top: 10px;
// }

}


@media print {
    .site-header{display:none;}
    body{font-size:12px;}
    h1{font-size:16px;}
    h2{font-size:15px;}
    h3{font-size:14px;}
    h4,h5,h6{font-size:13px;}
}

